--- a/src/arrow.html
+++ b/src/arrow.html
@@ -83,10 +83,12 @@
             // const arrow2 = new Arrow2(source, target);
 
             const arrow = new Arrow(source, target, new ArrowStyle(), new Label("Hello"));
-            arrow.style.heads = ["epi"];
-            arrow.style.tails = ["mono"];
+            // arrow.style.heads = ["hook-top"];
+            // arrow.style.tails = ["hook-bottom"];
+            // arrow.style.heads = CONSTANTS.ARROW_HEAD_STYLE.HARPOON_TOP;
             arrow.style.level = 1;
-            arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DASHED;
+            arrow.style.shorten = 40;
+            // arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DASHED;
             arrow.style.body_style = CONSTANTS.ARROW_BODY_STYLE.PROARROW;
             arrow.label.alignment = CONSTANTS.LABEL_ALIGNMENT.LEFT;
             arrow.redraw();
