--- a/src/arrow.html
+++ b/src/arrow.html
@@ -90,7 +90,7 @@
             arrow.style.shorten = 40;
             // arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DASHED;
             arrow.style.body_style = CONSTANTS.ARROW_BODY_STYLE.PROARROW;
-            arrow.label.alignment = CONSTANTS.LABEL_ALIGNMENT.LEFT;
+            arrow.label.alignment = CONSTANTS.LABEL_ALIGNMENT.CENTRE;
             arrow.redraw();
             document.body.appendChild(arrow.element.element);
 
