--- a/src/arrow.html
+++ b/src/arrow.html
@@ -74,8 +74,8 @@
             // arrow.style.tails = CONSTANTS.ARROW_HEAD_STYLE.MAPS_TO;
             // arrow.style.heads = CONSTANTS.ARROW_HEAD_STYLE.HARPOON_TOP;
             arrow.style.level = 1;
-            // arrow.style.shorten = 40;
-            // arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DASHED;
+            arrow.style.shorten = 40;
+            arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DOTTED;
             // arrow.style.body_style = CONSTANTS.ARROW_BODY_STYLE.SQUIGGLY;
             arrow.label.alignment = CONSTANTS.LABEL_ALIGNMENT.OVER;
             arrow.redraw();
