Add touchscreen support

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>quiver: a modern commutative diagram editor</title>
     <link rel="icon" href="icon.png">
+    <!-- Prevent zooming on mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Metadata for Open Graph -->
     <meta name="description" content="A modern commutative diagram editor with support for tikz-cd.">
     <meta property="og:title" content="quiver">
