Preload toolbar icons

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,24 @@
     <meta property="og:locale" content="en_GB">
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Style sheets and scrips -->
+    <!-- Preload images that we want to display immediately. -->
     <link rel="preload" href="quiver-blue.svg" as="image">
+    <link rel="preload" href="icons/about.svg" as="image">
+    <link rel="preload" href="icons/centre-view.svg" as="image">
+    <link rel="preload" href="icons/delete.svg" as="image">
+    <link rel="preload" href="icons/deselect-all.svg" as="image">
+    <link rel="preload" href="icons/hide-grid.svg" as="image">
+    <link rel="preload" href="icons/redo.svg" as="image">
+    <link rel="preload" href="icons/reset-zoom.svg" as="image">
+    <link rel="preload" href="icons/save.svg" as="image">
+    <link rel="preload" href="icons/select-all.svg" as="image">
+    <link rel="preload" href="icons/shortcuts.svg" as="image">
+    <link rel="preload" href="icons/show-hints.svg" as="image">
+    <link rel="preload" href="icons/show-queue.svg" as="image">
+    <link rel="preload" href="icons/undo.svg" as="image">
+    <link rel="preload" href="icons/zoom-in.svg" as="image">
+    <link rel="preload" href="icons/zoom-out.svg" as="image">
+    <!-- Style sheets and scrips -->
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script type="text/javascript" src="ds.js"></script>
     <script type="text/javascript" src="dom.js"></script>
