--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     </script>
 </head>
 <body>
-    <a href="https://github.com/varkor/quiver" target="_blank">
+    <a id="logo-link" href="https://github.com/varkor/quiver" target="_blank">
         <img src="quiver.svg" class="logo">
     </a>
     <noscript>JavaScript must be enabled to use quiver.</noscript>
@@ -70,6 +70,14 @@
             document.addEventListener("keydown", cancel);
             document.addEventListener("keyup", cancel);
 
+            if (query_data.has("embed")) {
+                // If the `embed` query parameter is present, we'll automatically switch to
+                // `UIMode.Embedded` in `ui.js`, which will add the `embedded` class to the body.
+                // However, we pre-empt this here by adding `embedded` immediately upon loading, so
+                // that the `loading_screen` will have the correct CSS applied from the start.
+                document.body.classList.add("embedded");
+            }
+
             const loading_screen = new DOM.Div({ class: "loading-screen" })
                 .add(new DOM.Element("img", { src: "quiver-blue.svg", class: "logo" }))
                 .add(new DOM.Element("span").add("Loading diagram..."))
@@ -80,6 +88,26 @@
                 .listen(pointer_event("up"), cancel)
                 .listen("wheel", cancel, { passive: true });
             document.body.appendChild(loading_screen.element);
+        }
+
+        // Takes a `Map` containing a collection of query parameters and reconstructs a
+        // corresponding URL. An array containing parameters to `ignore` is used to delete unwanted
+        // query parameters.
+        function reconstruct_URL(query_data, ignore) {
+            const URL_prefix = window.location.href.replace(/\?.*$/, "?");
+            return Array.from(query_data.entries())
+                .filter(([key,]) => !ignore.includes(key))
+                .map(([key, value]) => `${encodeURIComponent(key)}=${encodeURIComponent(value)}`)
+                .reduce((acc, x) => `${acc}&${x}`, URL_prefix);
+        }
+
+        // If we're running in embedded view, update the logo so that clicking it opens the
+        // the current diagram in the app.
+        if (query_data.has("embed")) {
+            document.querySelector("#logo-link").href = reconstruct_URL(query_data, [
+                "embed",
+                "scale",
+            ]);
         }
     </script>
 </body>
