--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <link rel="preload" href="icons/undo.svg" as="image">
     <link rel="preload" href="icons/zoom-in.svg" as="image">
     <link rel="preload" href="icons/zoom-out.svg" as="image">
-    <!-- Style sheets and scrips -->
+    <!-- Style sheets and scripts -->
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script type="text/javascript" src="ds.js"></script>
     <script type="text/javascript" src="dom.js"></script>
