--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,13 @@
     <script type="text/javascript" src="arrow.js"></script>
     <script type="text/javascript" src="parser.js"></script>
     <script type="text/javascript" src="ui.js"></script>
+    <!-- Web app manifest -->
+    <link rel="manifest" href="manifest.json">
+    <!-- Service worker -->
+    <script type="module">
+        import { Workbox } from "workbox/workbox-window.prod.mjs";
+        if ("serviceWorker" in navigator) new Workbox("service-worker.js").register();
+    </script>
 </head>
 <body>
     <a id="logo-link" href="https://github.com/varkor/quiver" target="_blank">
