Implement a tikz-cd parser

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="quiver.js"></script>
     <script type="text/javascript" src="bezier.js"></script>
     <script type="text/javascript" src="arrow.js"></script>
+    <script type="text/javascript" src="parser.js"></script>
     <script type="text/javascript" src="ui.js"></script>
 </head>
 <body>
