--- a/src/tests/arrow.html
+++ b/src/tests/arrow.html
@@ -33,7 +33,7 @@
     </style>
     <script type="text/javascript" src="../ds.js"></script>
     <script type="text/javascript" src="../dom.js"></script>
-    <script type="text/javascript" src="../bezier.js"></script>
+    <script type="text/javascript" src="../curve.js"></script>
     <script type="text/javascript" src="../arrow.js"></script>
     <script>
         let drag = null;
