--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <script type="text/javascript" src="ds.js"></script>
     <script type="text/javascript" src="dom.js"></script>
     <script type="text/javascript" src="quiver.js"></script>
-    <script type="text/javascript" src="bezier.js"></script>
+    <script type="text/javascript" src="curve.js"></script>
     <script type="text/javascript" src="arrow.js"></script>
     <script type="text/javascript" src="parser.js"></script>
     <script type="text/javascript" src="ui.js"></script>
