--- a/src/tests/arrow.html
+++ b/src/tests/arrow.html
@@ -31,10 +31,10 @@
             display: none;
         }
     </style>
-    <script type="text/javascript" src="../ds.js"></script>
-    <script type="text/javascript" src="../dom.js"></script>
-    <script type="text/javascript" src="../curve.js"></script>
-    <script type="text/javascript" src="../arrow.js"></script>
+    <script type="text/javascript" src="../ds.mjs"></script>
+    <script type="text/javascript" src="../dom.mjs"></script>
+    <script type="text/javascript" src="../curve.mjs"></script>
+    <script type="text/javascript" src="../arrow.mjs"></script>
     <script>
         let drag = null;
 
