--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     <script type="module">
         import { Workbox } from "./Workbox/workbox-window.prod.mjs";
         if ("serviceWorker" in navigator) {
-            new Workbox("service-worker.js").register();
+            // new Workbox("service-worker.js").register();
         }
     </script>
 </head>
